organization: fix mis-aligned searchbox and fix wrong bg color

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -6249,3 +6249,7 @@ div.diff-body[data-outdated="true"] tr:hover .icon-comment {
   font-weight: bold;
   margin-right: 10px;
 }
+
+.group-board {
+      width: 100% !important;
+}
